--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "Experience"
       href: about.html
+    - text: "Viz Example"
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<tjs2193@cumc.columbia.edu>
     - icon: fa-github fa-lg
