--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: about.html
     - text: "Viz Example"
       href: dashboard.html
+    - text: "APEX Poster"
+      href: apexposter.html
     - icon: fa-envelope fa-lg
       href: mailto:<tjs2193@cumc.columbia.edu>
     - icon: fa-github fa-lg
